k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress

metadata:
  name: ingress-service
  lbels:
    app: final-exam
spec:
  rules:
    - http:
        paths:
          - path: /student
            backend:
              serviceName: student-details
              servicePort: 8081
          - path: /course
            backend:
              serviceName: course-registration
              servicePort: 8082
