k8s/student-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress

metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: idquery-clusterip-service
              servicePort: 8080
          - path: /
            backend:
              serviceName: frontend-clusterip-service
              servicePort: 80
          - path: /reference
            backend:
              serviceName: referencedata-clusterip-service
              servicePort: 8080
          - path: /user
            backend:
              serviceName: referencedata-clusterip-service
              servicePort: 8080
          - path: /statistics
            backend:
              serviceName: referencedata-clusterip-service
              servicePort: 8080
